--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -214,7 +214,7 @@ print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 
 <p>1.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/f1ba7ac05f423a5cc3364389bbf4ef42/raw/5b21230ff1545511ff7eb87dcbbbbda429eeb668/w13-1.py">繪製兩個紅色正方形及對角線</a></p>
 <p></p>
 <p>2.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/f1ba7ac05f423a5cc3364389bbf4ef42/raw/4e713beb758d844b5ac162f7d6644210af5b13a7/13-2.py">加上外切圓</a></p><h3>w14_ex</h3>
-<h1>HW 2</h1>
+<p>1.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/74481132346db9ea98a556f202f4f770/raw/7b45d30dab7c2c8bf0346e556e796dc48c9f1a55/w14.py">三圓塗色</a></p><h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
 <hr/>
