--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -325,15 +325,16 @@ ctx.rect(320, 90, 60, 20)
 ctx.fillStyle = "Blue"
 ctx.fill()
 </pre>
-<p><span><img alt="" height="251" src="/images/2025-01-07 (1).png" width="476"/></span></p>
-<p><span></span><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/db0526ae3a65a44185490b45800af7b194899ae7/w16-1.py">exam1</a></p><h1>HW 3</h1>
+<p><img alt="" height="261" src="/images/2025-01-07 (3).png" width="458"/></p>
+<p><span></span><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/3be8097d08d21e62a3a440a72ebda0d7b574b162/16-1-2">exam1</a></p><h1>HW 3</h1>
 <h4>主題: Python 的數字、演算法與迴圈 (20%)</h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 4 and Part 5</p>
 <p>完成上述流程整理後, 請將 HW3 自評分數輸入 cp2024 自評表單中.</p>
 <h2>HW 3 Exam</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 3 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
-<h3>w16_exam2</h3><h3>w8</h3>
+<h3>w16_exam2</h3>
+<p>題目一: 請以<span>自己的學號最後四碼</span>作為下列繪圖的左上方點座標, (例如: 若學號最後四碼為 3932, 請將 (39, 32) 作為繪圖左上方點座標), 並以紅色文字標示出該點座標 (例如: (39, 32)), 之後請利用<span> </span><span>pixel=2 的藍色直線</span>,<span> </span><span>自訂迷宮畫布大小</span>, 直接在頁面畫出下列圖像, 繪圖程式除了必須直接列在頁面 html 檔案外, 也請存入自己的 Gist 區域, 並在所完成的圖像下方, 以自選標題的 anchor 連結至 Gist, 讓使用者點擊該連結後, 可以在各自的 Brython 頁面中繪出下列圖像).</p><h3>w8</h3>
 <p>操作步驟:</p>
 <ol>
 <li>下載 <a href="http://229.cycu.org/python_2025_lite.7z">python_2025_lite.7z</a> (可攜程式環境)</li>
